<resources>
    <string name="app_name">kotlinTest</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_login_with_facebook">Sign in with Facebook</string>
    <string name="action_login_with_google">Sign in with Google</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="loginErrorMsg">Login error</string>
    <string name="recoverErrorMsg">Error recovering password</string>
    <string name="registerErrorMsg">Sign up error</string>
    <string name="title_activity_register">Register</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="error_password_not_match">Repeat password not match</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_description">Description (Optional)</string>
    <string name="prompt_number">Number (Optional)</string>
    <string name="action_save">Save</string>
    <string name="save_error">Save error</string>
    <string name="delete_error">Delete error</string>
    <string name="error_mandatory_field">Mandatory field</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="error_getting_items">Error getting items</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="sure_to_delete">Are you sure to delete?</string>
    <string name="dependency_load_error">Error getting resources</string>
    <string name="title_activity_account">Account</string>
    <string name="action_change">Change</string>
    <string name="change_password">Change password</string>
    <string name="promt_last_name">Last name</string>
    <string name="promt_first_name">First name</string>
    <string name="error_invalid_first_name">Invalid first name</string>
    <string name="error_invalid_last_name">Invalid last name</string>
    <string name="save_success">Save success</string>
    <string name="my_account">My account</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="error_existing_email">This account is already registered</string>
    <string name="activate_account_first">Confirm your email first</string>
    <string name="action_recover">Recover</string>
    <string name="title_activity_recover_password">Recover password</string>
    <string name="recover_password">Forgot password?</string>
    <string name="recover_password_success">We have sent you an email with password recovery instructions</string>
    <string name="ok">OK</string>
        <string name="local_date_dateofbirth">dateOfBirth</string>
        <string name="local_date_contractclosingdate">contractClosingDate</string>
        <string name="local_date_resumefileuploadedon">resumeFileUploadedOn</string>
        <string name="entity_candidate">Candidate</string>
    <string name="title_activity_candidate">Candidate</string>
    <string name="title_activity_candidate_detail">Candidate</string>
    <string name="field_candidate_firstName">firstName</string>
    <string name="entity_candidate_prompt_firstName">firstName</string>
    <string name="error_candidate_invalid_firstName">Invalid firstName</string>
    <string name="field_candidate_lastName">lastName</string>
    <string name="entity_candidate_prompt_lastName">lastName</string>
    <string name="error_candidate_invalid_lastName">Invalid lastName</string>
    <string name="field_candidate_phoneNumber">phoneNumber</string>
    <string name="entity_candidate_prompt_phoneNumber">phoneNumber</string>
    <string name="error_candidate_invalid_phoneNumber">Invalid phoneNumber</string>
    <string name="field_candidate_email">email</string>
    <string name="entity_candidate_prompt_email">email</string>
    <string name="error_candidate_invalid_email">Invalid email</string>
    <string name="field_candidate_dateOfBirth">dateOfBirth</string>
    <string name="entity_candidate_prompt_dateOfBirth">dateOfBirth</string>
    <string name="error_candidate_invalid_dateOfBirth">Invalid dateOfBirth</string>
    <string name="field_candidate_gender">gender</string>
    <string name="entity_candidate_prompt_gender">gender</string>
    <string name="error_candidate_invalid_gender">Invalid gender</string>
    <string name="field_candidate_passportNumber">passportNumber</string>
    <string name="entity_candidate_prompt_passportNumber">passportNumber</string>
    <string name="error_candidate_invalid_passportNumber">Invalid passportNumber</string>
    <string name="field_candidate_workAuthorisationCategory">workAuthorisationCategory</string>
    <string name="entity_candidate_prompt_workAuthorisationCategory">workAuthorisationCategory</string>
    <string name="error_candidate_invalid_workAuthorisationCategory">Invalid workAuthorisationCategory</string>
    <string name="field_candidate_nationality">nationality</string>
    <string name="entity_candidate_prompt_nationality">nationality</string>
    <string name="error_candidate_invalid_nationality">Invalid nationality</string>
    <string name="field_candidate_workAuthorisation">workAuthorisation</string>
    <string name="entity_candidate_prompt_workAuthorisation">workAuthorisation</string>
    <string name="error_candidate_invalid_workAuthorisation">Invalid workAuthorisation</string>
    <string name="field_candidate_validity">validity</string>
    <string name="entity_candidate_prompt_validity">validity</string>
    <string name="error_candidate_invalid_validity">Invalid validity</string>
    <string name="field_candidate_experienceLevel">experienceLevel</string>
    <string name="entity_candidate_prompt_experienceLevel">experienceLevel</string>
    <string name="error_candidate_invalid_experienceLevel">Invalid experienceLevel</string>
    <string name="field_candidate_totalExperienceInYears">totalExperienceInYears</string>
    <string name="entity_candidate_prompt_totalExperienceInYears">totalExperienceInYears</string>
    <string name="error_candidate_invalid_totalExperienceInYears">Invalid totalExperienceInYears</string>
    <string name="field_candidate_totalExperienceInMonths">totalExperienceInMonths</string>
    <string name="entity_candidate_prompt_totalExperienceInMonths">totalExperienceInMonths</string>
    <string name="error_candidate_invalid_totalExperienceInMonths">Invalid totalExperienceInMonths</string>
    <string name="field_candidate_currentSalaryCurrency">currentSalaryCurrency</string>
    <string name="entity_candidate_prompt_currentSalaryCurrency">currentSalaryCurrency</string>
    <string name="error_candidate_invalid_currentSalaryCurrency">Invalid currentSalaryCurrency</string>
    <string name="field_candidate_currentSalary">currentSalary</string>
    <string name="entity_candidate_prompt_currentSalary">currentSalary</string>
    <string name="error_candidate_invalid_currentSalary">Invalid currentSalary</string>
    <string name="field_candidate_currentSalaryTimeUnit">currentSalaryTimeUnit</string>
    <string name="entity_candidate_prompt_currentSalaryTimeUnit">currentSalaryTimeUnit</string>
    <string name="error_candidate_invalid_currentSalaryTimeUnit">Invalid currentSalaryTimeUnit</string>
    <string name="field_candidate_skillTags">skillTags</string>
    <string name="entity_candidate_prompt_skillTags">skillTags</string>
    <string name="error_candidate_invalid_skillTags">Invalid skillTags</string>
    <string name="field_candidate_resumeTitle">resumeTitle</string>
    <string name="entity_candidate_prompt_resumeTitle">resumeTitle</string>
    <string name="error_candidate_invalid_resumeTitle">Invalid resumeTitle</string>
    <string name="field_candidate_profileSummary">profileSummary</string>
    <string name="entity_candidate_prompt_profileSummary">profileSummary</string>
    <string name="error_candidate_invalid_profileSummary">Invalid profileSummary</string>
    <string name="field_candidate_openForPhoneCall">openForPhoneCall</string>
    <string name="entity_candidate_prompt_openForPhoneCall">openForPhoneCall</string>
    <string name="error_candidate_invalid_openForPhoneCall">Invalid openForPhoneCall</string>
    <string name="field_candidate_openForEmailCommunication">openForEmailCommunication</string>
    <string name="entity_candidate_prompt_openForEmailCommunication">openForEmailCommunication</string>
    <string name="error_candidate_invalid_openForEmailCommunication">Invalid openForEmailCommunication</string>
    <string name="field_candidate_isInContract">isInContract</string>
    <string name="entity_candidate_prompt_isInContract">isInContract</string>
    <string name="error_candidate_invalid_isInContract">Invalid isInContract</string>
    <string name="field_candidate_contractClosingDate">contractClosingDate</string>
    <string name="entity_candidate_prompt_contractClosingDate">contractClosingDate</string>
    <string name="error_candidate_invalid_contractClosingDate">Invalid contractClosingDate</string>
    <string name="field_candidate_resumeFileName">resumeFileName</string>
    <string name="entity_candidate_prompt_resumeFileName">resumeFileName</string>
    <string name="error_candidate_invalid_resumeFileName">Invalid resumeFileName</string>
    <string name="field_candidate_resumeFileLocation">resumeFileLocation</string>
    <string name="entity_candidate_prompt_resumeFileLocation">resumeFileLocation</string>
    <string name="error_candidate_invalid_resumeFileLocation">Invalid resumeFileLocation</string>
    <string name="field_candidate_resumeFileUploadedOn">resumeFileUploadedOn</string>
    <string name="entity_candidate_prompt_resumeFileUploadedOn">resumeFileUploadedOn</string>
    <string name="error_candidate_invalid_resumeFileUploadedOn">Invalid resumeFileUploadedOn</string>
        <string name="set<_string>_jobtags">jobTags</string>
        <string name="local_date_createdat">createdAt</string>
        <string name="local_date_modifiedat">modifiedAt</string>
        <string name="entity_job">Job</string>
    <string name="title_activity_job">Job</string>
    <string name="title_activity_job_detail">Job</string>
    <string name="field_job_jobName">jobName</string>
    <string name="entity_job_prompt_jobName">jobName</string>
    <string name="error_job_invalid_jobName">Invalid jobName</string>
    <string name="field_job_companyName">companyName</string>
    <string name="entity_job_prompt_companyName">companyName</string>
    <string name="error_job_invalid_companyName">Invalid companyName</string>
    <string name="field_job_location">location</string>
    <string name="entity_job_prompt_location">location</string>
    <string name="error_job_invalid_location">Invalid location</string>
    <string name="field_job_positionType">positionType</string>
    <string name="entity_job_prompt_positionType">positionType</string>
    <string name="error_job_invalid_positionType">Invalid positionType</string>
</resources>