<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
      <item
android:id="@+id/nav_candidate"
android:icon="@drawable/ic_menu_camera"
android:title="@string/entity_candidate"
/><item
android:id="@+id/nav_job"
android:icon="@drawable/ic_menu_camera"
android:title="@string/entity_job"
/><!--<menu-needle-->


    </group>

    <item android:title="@string/account">
        <menu>
          <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/my_account" />
        </menu>
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
